force-app/main/default/objects/PartPriceBreakLevel__c/PartPriceBreakLevel__c.object-meta.xml
<CustomObject>
    <label>Part Price Break Level</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Price Break Levels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>