force-app/main/default/objects/PartPriceBreakLevel__c/fields/ConfiguredPart__c.field-meta.xml
<CustomField>
    <fullName>ConfiguredPart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Configured Part</label>
    <referenceTo>ConfiguredPart__c</referenceTo>
    <relationshipLabel>Part Price Break Levels</relationshipLabel>
    <relationshipName>PartPriceBreakLevels</relationshipName>
    <type>Lookup</type>
</CustomField>