force-app/main/default/objects/PartPriceBreakLevel__c/fields/DiscountableLotCharge__c.field-meta.xml
<CustomField>
    <fullName>DiscountableLotCharge__c</fullName>
    <label>Discountable Lot Charge</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>