force-app/main/default/objects/PartPriceBreakLevel__c/fields/NonDisountableLotCharge__c.field-meta.xml
<CustomField>
    <fullName>NonDisountableLotCharge__c</fullName>
    <label>Non-Disountable Lot Charge</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>