force-app/main/default/objects/PartPriceBreakLevel__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <label>Unit Price</label>
    <precision>11</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>