force-app/main/default/objects/PartPriceBreakLevel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ConfiguredPart__c</columns>
    <columns>DiscountableLotCharge__c</columns>
    <columns>NonDisountableLotCharge__c</columns>
    <columns>QuantityLowerLimit__c</columns>
    <columns>QuantityUpperLimit__c</columns>
    <columns>UnitPrice__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>